package elevator;

public class ExternalCallButton {
    private final int floor;
    private final ElevatorControlCenter controller;

    public ExternalCallButton(int floor, ElevatorControlCenter controller) {
        this.floor = floor;
        this.controller = controller;
    }

    public void callElevator() {
        System.out.println("Calling the elevator to floor: " + floor);
        controller.selectFloor(floor);
    }
}

